@@ -187,13 +187,49 @@ class TestInteger < Test::Unit::TestCase
     assert_int_equal(11110, 11111.round(-1))
     assert_int_equal(11100, 11111.round(-2))
     assert_int_equal(+200, +249.round(-2))
-    assert_int_equal(+300, +250.round(-2))
+    assert_int_equal(+200, +250.round(-2))
     assert_int_equal(-200, -249.round(-2))
-    assert_int_equal(-300, -250.round(-2))
-    assert_int_equal(+30 * 10**70, (+25 * 10**70).round(-71))
-    assert_int_equal(-30 * 10**70, (-25 * 10**70).round(-71))
+    assert_int_equal(+200, +249.round(-2, half: :even))
+    assert_int_equal(+200, +250.round(-2, half: :even))
+    assert_int_equal(+300, +349.round(-2, half: :even))
+    assert_int_equal(+400, +350.round(-2, half: :even))
+    assert_int_equal(+200, +249.round(-2, half: :up))
+    assert_int_equal(+300, +250.round(-2, half: :up))
+    assert_int_equal(+300, +349.round(-2, half: :up))
+    assert_int_equal(+400, +350.round(-2, half: :up))
+    assert_int_equal(-200, -250.round(-2))
+    assert_int_equal(-200, -249.round(-2, half: :even))
+    assert_int_equal(-200, -250.round(-2, half: :even))
+    assert_int_equal(-300, -349.round(-2, half: :even))
+    assert_int_equal(-400, -350.round(-2, half: :even))
+    assert_int_equal(-200, -249.round(-2, half: :up))
+    assert_int_equal(-300, -250.round(-2, half: :up))
+    assert_int_equal(-300, -349.round(-2, half: :up))
+    assert_int_equal(-400, -350.round(-2, half: :up))
+    assert_int_equal(+20 * 10**70, (+25 * 10**70).round(-71))
+    assert_int_equal(-20 * 10**70, (-25 * 10**70).round(-71))
     assert_int_equal(+20 * 10**70, (+25 * 10**70 - 1).round(-71))
     assert_int_equal(-20 * 10**70, (-25 * 10**70 + 1).round(-71))
+    assert_int_equal(+40 * 10**70, (+35 * 10**70).round(-71))
+    assert_int_equal(-40 * 10**70, (-35 * 10**70).round(-71))
+    assert_int_equal(+30 * 10**70, (+35 * 10**70 - 1).round(-71))
+    assert_int_equal(-30 * 10**70, (-35 * 10**70 + 1).round(-71))
+    assert_int_equal(+20 * 10**70, (+25 * 10**70).round(-71, half: :even))
+    assert_int_equal(-20 * 10**70, (-25 * 10**70).round(-71, half: :even))
+    assert_int_equal(+20 * 10**70, (+25 * 10**70 - 1).round(-71, half: :even))
+    assert_int_equal(-20 * 10**70, (-25 * 10**70 + 1).round(-71, half: :even))
+    assert_int_equal(+40 * 10**70, (+35 * 10**70).round(-71, half: :even))
+    assert_int_equal(-40 * 10**70, (-35 * 10**70).round(-71, half: :even))
+    assert_int_equal(+30 * 10**70, (+35 * 10**70 - 1).round(-71, half: :even))
+    assert_int_equal(-30 * 10**70, (-35 * 10**70 + 1).round(-71, half: :even))
+    assert_int_equal(+30 * 10**70, (+25 * 10**70).round(-71, half: :up))
+    assert_int_equal(-30 * 10**70, (-25 * 10**70).round(-71, half: :up))
+    assert_int_equal(+20 * 10**70, (+25 * 10**70 - 1).round(-71, half: :up))
+    assert_int_equal(-20 * 10**70, (-25 * 10**70 + 1).round(-71, half: :up))
+    assert_int_equal(+40 * 10**70, (+35 * 10**70).round(-71, half: :up))
+    assert_int_equal(-40 * 10**70, (-35 * 10**70).round(-71, half: :up))
+    assert_int_equal(+30 * 10**70, (+35 * 10**70 - 1).round(-71, half: :up))
+    assert_int_equal(-30 * 10**70, (-35 * 10**70 + 1).round(-71, half: :up))
 
     assert_int_equal(1111_1111_1111_1111_1111_1111_1111_1110, 1111_1111_1111_1111_1111_1111_1111_1111.round(-1))
     assert_int_equal(-1111_1111_1111_1111_1111_1111_1111_1110, (-1111_1111_1111_1111_1111_1111_1111_1111).round(-1))
