@@ -1,3 +1,10 @@
+Sat Nov  5 18:49:37 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* numeric.c (flo_round, int_round): support round-to-nearest-even
+	  semantics of IEEE 754 to match sprintf behavior, and add `half:`
+	  optional keyword argument for the old behavior.
+	  [ruby-core:76273] [Bug #12548]
+
 Sat Nov  5 18:17:54 2016  Akinori MUSHA  <knu@iDaemons.org>
 
 	* lib/set.rb (Set#compare_by_identity, Set#compare_by_identity?):
